# TabulateDockerPS

./: LICENSE.md  README.md  pyproject.toml  tdps.py
tabulatedockerps/: tdps.py
